mobile style error

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: JavaGuide
-subtitle: '清风徐来～～～～'
-description: ''
+subtitle: '一个程序员'
+description: '爱生活，多思考！'
 keywords:
 author: SnailClimb
 language: zh-CN
