--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: JavaGuide
 subtitle: 'SnailClimb:一个程序员'
-description: '爱生活，多思考！'
+description: '爱生活，多思考，多运动！'
 keywords:
 author: SnailClimb
 language: zh-CN
@@ -29,6 +29,12 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
+
+# 搜索
+
+search:
+  path: search.xml
+  field: post
 
 # Writing
 new_post_name: :title.md # File name of new posts
@@ -112,5 +118,6 @@ deploy:
   type: git
   repository:
     github: https://github.com/Snailclimb/Snailclimb.github.io.git
-    coding: https://git.coding.net/Snailclimb/SnailClimb.coding.me.git
+    coding: https://git.dev.tencent.com/JavaGuide/JavaGuide.coding.me.git
+    gitee: https://gitee.com/SnailClimb/SnailClimb.git
   branch: master
